<resources>
    <string name="app_name">Talabia</string>
    <string name="facebook_app_id">146506662699344</string>
    <string name="fb_login_protocol_scheme">fb146506662699344</string>
    <string name="title_activity_home">Home</string>
    <string name="register">Register</string>
    <string name="profil">Profil</string>
    <string name="setting_profil">Setting Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="setting">Setting</string>
    <string name="contact_us">Contact Us</string>
    <string name="address">address</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="data_profil">Data Profil</string>
    <string name="action_settings">Settings</string>
    <string name="change_setting">Change Setting</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="Famale">Famale</string>
    <string name="save">Save</string>
    <string name="change_contacts">Change Contacts</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="tab_1">Home</string>
    <string name="tab_2">Category</string>
    <string name="about">About</string>
    <string name="title_activity_setting">Setting</string>
    <string name="backdrop_title">Talabia</string>
    <string name="backdrop_subtitle">Special Offer Up To 80%</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_add_cart">Add to cart</string>
    <string name="category">Category</string>
    <string name="buy">Buy</string>
    <string name="cart">Cart</string>
    <string name="checkout">Checkout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="privacy_policy">By registering, I agree ? </string>
    <string name="requirement">Terms and Conditions</string>

</resources>
